# dev-bot

./: .gitignore  .guardian-status.json  AI_DRIVEN_RESTART.md  ANALYSIS_REPORT.md  ARCHITECTURE_V2.md  CLI_QUICKSTART.md  CODE_REVIEW_REPORT.md  DESIGN_PRINCIPLES.md  DEVELOPMENT_PLAN.md  MEMORY_ANALYSIS_REPORT.md  MINIMAL_DESIGN.md  PROCESS_CLEANUP_FIXES.md  PROMPT.md  PROMPT_PERSISTENCE.md  README.md  SDD_AI_GUIDE.md  SDD_CLI_README.md  SELF_DEVELOPMENT_LOG.md  TUI_REVIEW_REPORT.md  UV_USAGE_GUIDE.md  ZMQ_MIGRATION_ANALYSIS.md  analyze_self.py  cleanup_pycache.sh  config.json  dev-bot.spec  main.py  pyproject.toml  pytest.ini  release.sh  ruff.toml  start_self_iteration.py  test_process_cleanup.py  test_timeout_cleanup.py
.ai-logs/: session_10_20260304_222952.md  session_11_20260304_223058.md  session_3_20260304_210958.md  session_5_20260304_213100.md  session_9_20260304_222825.md  session_counter.json  stats.json
.dev-bot-cache/: analysis.json  restart_info.json  suggestions.json
.dev-bot-evolution/: current_prompt.json
.dev-bot-memory/: context.json
.github/workflows/: ci.yml  release.yml
.ipc/: ai-loop-status.json
dev_bot/: __init__.py  __main__.py  ai_dialogue.py  ai_evolution_system.py  ai_guardian_monitor.py  ai_loop_control.py  ai_loop_process.py  ai_loop_scheduler.py  ai_prompts.py  ai_runner.py  ai_team.py  anomaly_detector.py  architecture.py  auto_dev_cmd.py  auto_project_dev.py  auto_restart.py  background_system.py  business_logic_layer.py  cli.py  cli_core.py  command_scheduler.py  config_file_watcher.py  config_validator.py  core.py  development_session.py  dialogue_integrator.py  error_analyzer.py  error_handler.py  git_manager.py  guardian.py  guardian_process.py  iflow.py  iflow_manager.py  interaction.py  interaction_logger.py  ipc.py  ipc_realtime.py  logger.py  main.py  memory.py  (+23 more)
dev_bot/.error-logs/: error_2026-03-04_20-54-55.json  error_2026-03-04_20-55-12.json
dev_bot/cli/: commands.py  enhance.py  extract.py  main.py
dev_bot/guardian/: __init__.py  ai_health_checker.py  ai_recovery.py  business.py  core.py  prompt_generator.py
docs/: AI_INTERACTION_ARCHITECTURE.md  CLI_REFERENCE.md  DYNAMIC_PROMPT.md  GUARDIAN_LAYERED_ARCHITECTURE.md  HEADLESS_MODE.md  SELF_ITERATION.md  SPEC_CODE_CONSISTENCY.md  TUI_GUIDE.md  UNIFIED_ITERATION.md
examples/: ai_guardian_demo.py  ai_team_demo.py  dialogue_integration_demo.py  dialogue_integration_simple_demo.py  headless_mode_demo.py  interactive_demo.py  peer_architecture_demo.py  process_manager_demo.py  repl_demo.py  self_iteration_demo.py  unified_iteration_demo.py
specs/: config-validation.json  config-validation.json.backup  dev-bot-feature.json  dev-bot-feature.json.backup  dev-bot-service.json  dev-bot-service.json.backup
standalone/: .gitignore  LICENSE  PROMPT.md  README.md  setup.sh
templates/specs/: api.json  component.json  feature.json  service.json
tests/: conftest.py  test_ai_dialogue.py  test_ai_evolution.py  test_ai_guardian_monitor.py  test_ai_loop_interaction.py  test_ai_team.py  test_anomaly_detector.py  test_auto_restart.py  test_business_logic_layer.py  test_cli.py  test_command_scheduler.py  test_config.py  test_config_validator.py  test_config_validator_extended.py  test_dialogue_integration.py  test_dynamic_prompt.py  test_error_handler.py  test_guardian_layered.py  test_iflow_manager.py  test_ipc_realtime.py  test_logger.py  test_multi_iflow_manager.py  test_nonblocking_inquirer.py  test_peer_architecture.py  test_process_manager.py  test_project_scanner.py  test_queue_system.py  test_repl_mode.py  test_self_iteration_simple.py  test_simple_architecture.py  test_spec_code_consistency.py  test_tech_stack_detector.py
