[project]
name = "dev-bot"
version = "2.0.0"
description = "Dev-Bot - AI 驱动开发工具集（包含 Spec Driven Development 工具）"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Adam Ikari"}
]
keywords = ["ai", "automation", "development", "agent", "sdd", "spec-driven"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyyaml>=6.0,<7.0",
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0",
    "pytest-cov>=4.1.0,<6.0",
    "ruff>=0.1.0,<1.0",
]

[project.scripts]
dev-bot = "dev_bot.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["dev_bot"]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<9.0",
    "pytest-cov>=4.1.0,<6.0",
    "ruff>=0.1.0,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]